--- a/src/Makefile.in.ACME
+++ b/src/Makefile.in.ACME
@@ -38,12 +38,12 @@ else
 endif
 
 # Set MOAB info if it is being used
-ifeq ($(strip $(USE_MOAB)), TRUE)
+ifeq ($(COMP_INTERFACE),moab)
   ifdef MOAB_PATH
     CPPDEFS += -DHAVE_MOAB -DMOAB_MPAS_INSIDE_E3SM
     MOAB_INCLUDES = -I$(MOAB_PATH)/include
   else
-    $(error MOAB_PATH must be defined when USE_MOAB is TRUE)
+    $(error MOAB_PATH must be defined when using moab driver)
   endif
 endif
 
