change mpas_moabmesh API
now pass the external ID and MOAB pid as arguments
it can be used for mesh instance in the sea-ice model
also remove the references and uses of MOAB_MPAS_INSIDE_E3SM;
we will not build anymore MPAS with MOAB outside E3SM

--- a/src/Makefile.in.E3SM
+++ b/src/Makefile.in.E3SM
@@ -44,7 +44,7 @@ endif
 # Set MOAB info if it is being used
 ifeq ($(COMP_INTERFACE),moab)
   ifdef MOAB_PATH
-    CPPDEFS += -DHAVE_MOAB -DMOAB_MPAS_INSIDE_E3SM
+    CPPDEFS += -DHAVE_MOAB
     MOAB_INCLUDES = -I$(MOAB_PATH)/include
   else
     $(error MOAB_PATH must be defined when using moab driver)
